# hierarchical_insurtech_news_crew

./: Dockerfile.dev  README.md
.devcontainer/: devcontainer.json
insurtech_news/: README.md  pyproject.toml  report.md
insurtech_news/src/insurtech_news/: crew.py  main.py
insurtech_news/src/insurtech_news/config/: agents.yaml  tasks.yaml
